[package]
name = "ssh-portkey"
version = "0.1.1"
edition = "2021"
description = "Secure SSH credential manager with a fast ratatui-based TUI, fuzzy search, and encrypted vault"
license = "MIT"
readme = "README.md"
keywords = ["ssh", "tui", "cli", "security", "encryption"]
categories = ["command-line-utilities", "cryptography"]
# Optional: update these URLs before publishing
repository = "https://github.com/randomradio/portkey"
homepage = "https://github.com/randomradio/portkey"
documentation = "https://docs.rs/ssh-portkey"
exclude = [
    "target/**",
    ".github/**",
    "packaging/**",
    "tests/**",
    "portkey/**",
    "install.sh",
    ".claude/**",
    "Cargo.toml.orig",
]

[[bin]]
name = "portkey"
path = "src/main.rs"

[lib]
name = "portkey"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.6"
sodiumoxide = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
zeroize = "1.6"
rpassword = "7.2"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui = "0.26"
crossterm = "0.27"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3.8"
